Fix button wrap in fullscreen mode

--- a/skin/styl/core/buttons.styl
+++ b/skin/styl/core/buttons.styl
@@ -140,7 +140,6 @@
          display inline-block
    &.is-fullscreen
       .fp-fullscreen
-         display block !important
          &:before
           content "\e601"
 
